--- a/src/partials/modals.jade
+++ b/src/partials/modals.jade
@@ -165,7 +165,14 @@
 			.input-form
 				input(type="text" placeholder="Введите основные ключевые слова вашего вопроса")
 			ul.tag-cloud-1
-				li 
+				li Гражданское право
+				li Авторское право
+				li Жилищное право
+				li Юридическое обслуживание
+				li Сертификация
+				li Приватизация недвижимости
+				li Недвижимость
+				li Патентование
 			button(type="submit") Найти решение
 	.close.button
 
