--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -58,8 +58,17 @@
 			font-size: 22px
 
 .tag-cloud-1
+	margin: 18px 0 0
+	text-align: left
 	li
 		background: rgba(255,255,255,0.5)
+		border: 1px solid rgba(0,0,0,0.2)
+		cursor: pointer
+		display: inline-block
+		border-radius: 4px
+		margin: 0 6px 8px 0
+		padding: 0 10px
+		line-height: 2em
 
 // SIDEBAR NAVIGATION
 // .navigation-sidebar .nav.nav-sidebar .submenu .inner-holder > li
