--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -373,7 +373,7 @@ body
 	left: 0
 	top: 0
 	right: 0
-	height: 77px
+	height: 76px
 	z-index: 10
 	font-size: 0
 	white-space: nowrap
@@ -385,28 +385,28 @@ body
 		font-weight: inherit
 		line-height: inherit
 	.services-trigger
-		&:after
-			content: ''
-			background: url('../img/icons/toggle-sidebar-nav-collapse.svg') 50% 50% no-repeat
-			background-size: contain
-			top: 1px
-			position: relative
-			display: inline-block
-			margin-left: 4px
-			height: 11px
-			width: 11px
-			transition: transform 600ms
-			transform: rotate(90deg)
+		.gamburger
+			// TODO gamburger HERE!
+			// display: inline-block
+			vertical-align: middle
+			span
+				background: #000
+				display: block
+				// &:nth-child(1)
+				// &:nth-child(2)
+				// &:nth-child(3)
+		span
+			// vertical-align: middle
+			// display: inline-block
 		&.opened
-			&:after
-				transform: rotate(0deg)
+			.gamburger
 	.header-contacts-navigation-holder,
-	.logotype-holder,
 	.main-navigation-holder
 		display: inline-block
 		vertical-align: middle
 		text-transform: uppercase
 		font-size: 12px
+		white-space: nowrap
 		@media (min-width: $large)
 			font-size: 14px
 		.submenu
@@ -429,90 +429,23 @@ body
 				a
 					display: block
 					padding: 0 20px
-	.header-contacts-navigation-holder
+	.left-side,
+	.right-side
+		display: inline-block
+		vertical-align: middle
+		width: calc(50% - 90px)
+	.right-side
 		text-align: right
-		width: 12%
-		width: calc(130px)
-		.header-contacts-holder
-			margin: 10px 0
-			border-left: 1px solid #ddd
-			color: $main-color
-			font-weight: 600
-			position: relative
-			.submenu
-				display: inline-block
-				padding-top: 10px
-				pointer-events: none
-				position: absolute
-				opacity: 0
-				left: 24px
-				margin-top: 10px
-				bottom: -64px
-				transition: opacity 300ms, transform 300ms
-				transform: translateY(10px)
-				span
-					display: inline-block
-					background: #333
-					color: #fff
-					margin: 0
-					padding: 6px 12px
-					border-radius: 2px
-					line-height: 1em
-			&:hover
-				.submenu
-					opacity: 1
-					transform: translateY(0)
-			li
-				display: block
-				margin-right: 0
-				&.operator
-					a
-						position: relative
-						&:before
-							content: ''
-							display: inline-block
-							background:
-								position: 50% 50%
-								repeat: no-repeat
-								size: contain
-							position: absolute
-							left: -23px
-							top: 2px
-							height: 16px
-							width: 16px
-					&-viber
-						a
-							&:before
-								background-image: url('../img/icons/phone-icon-viber-1.svg')
-					&-lifecell
-						a
-							&:before
-								background-image: url('../img/icons/phone-icon-lifecell-1.svg')
-					&-kyivstar
-						a
-							&:before
-								background-image: url('../img/icons/phone-icon-ks-1.png')
-		.header-navigation-holder
-			li
-				display: inline-block
-				margin-right: 14px
-	.logotype-holder
-		text-align: center
-		padding: 6px 0
-		width: 12%
-		img
-			margin-bottom: -8px
-			width: 100%
 	.main-navigation-holder
 		// padding: 0 80px 0 30px
 		padding: 0 30px 0 30px
-		width: 76%
-		width: calc(88% - 130px)
-		& > li
+		width: 100%
+		& li
 			display: inline-block
 			line-height: 76px
 			margin: 0 5px
 			position: relative
+			text-align: left
 			&.active
 				color: $main-color
 				&:after
@@ -523,9 +456,13 @@ body
 					right: 0
 					bottom: -1px
 					height: 3px
+			.submenu
+				li
+					display: block
+					line-height: 3em
+					margin: 0
 			&.lang-switcher
 				border: 1px solid transparent
-				float: right
 				margin: -1px 0 0 0
 				padding: 0px 7px
 				position: relative
@@ -545,7 +482,6 @@ body
 					left: 0
 					text-align: left
 			&.search-trigger
-				float: right
 				.submenu
 					padding-top: 10px
 					pointer-events: none
@@ -558,6 +494,83 @@ body
 						border-radius: 2px
 						line-height: 1em
 
+	.header-contacts-holder
+		border-left: 1px solid #ddd
+		color: $main-color
+		display: inline-block
+		font-weight: 600
+		padding: 8px 0 8px 30px
+		position: relative
+		vertical-align: middle
+		li
+			display: block
+			line-height: 20px
+		.submenu
+			display: inline-block
+			padding-top: 10px
+			pointer-events: none
+			position: absolute
+			opacity: 0
+			left: 24px
+			margin-top: 10px
+			bottom: -64px
+			transition: opacity 300ms, transform 300ms
+			transform: translateY(10px)
+			span
+				display: inline-block
+				background: #333
+				color: #fff
+				margin: 0
+				padding: 6px 12px
+				border-radius: 2px
+				line-height: 1em
+		&:hover
+			.submenu
+				opacity: 1
+				transform: translateY(0)
+		li
+			display: block
+			margin-right: 0
+			&.operator
+				a
+					position: relative
+					&:before
+						content: ''
+						display: inline-block
+						background:
+							position: 50% 50%
+							repeat: no-repeat
+							size: contain
+						position: absolute
+						left: -23px
+						top: 2px
+						height: 16px
+						width: 16px
+				&-viber
+					a
+						&:before
+							background-image: url('../img/icons/phone-icon-viber-1.svg')
+				&-lifecell
+					a
+						&:before
+							background-image: url('../img/icons/phone-icon-lifecell-1.svg')
+				&-kyivstar
+					a
+						&:before
+							background-image: url('../img/icons/phone-icon-ks-1.png')
+	.header-navigation-holder
+		li
+			display: inline-block
+			margin-right: 14px
+	.logotype-holder
+		display: inline-block
+		text-align: center
+		padding: 13px 0
+		vertical-align: top
+		width: 187px
+		img
+			margin-bottom: -8px
+			width: 100%
 
 .search
 	& > *
@@ -612,6 +625,8 @@ body
 	overflow: hidden
 	position: relative
 	padding-top: 6px
+	.categories-slider-content
+		overflow: hidden
 	.categories-label
 		color: #fff
 		float: left
